<resources>
    <string name="app_name">Mydea</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="permissionAudio">Please enable permission to use the microphone</string>
    <string name="permissionCamera">Please enable permission to use the camera</string>

    <string name="pswText">Enter your password to get your notes</string>
    <string name="setPswText">Set new password to securely store your notes</string>
    <string name="passwordHint">Password</string>
    <string name="decryptButton">Decrypt my notes</string>
    <string name="setPswButton">Set password</string>

    <string name="savePassword">Do you want to set a new password?</string>

    <string name="appDescription">Your notes always with you</string>

    <string name="navCatAll">All</string>
    <string name="navCatWork">Work</string>
    <string name="navCatPersonal">Personal</string>
    <string name="navCatHobby">Hobby</string>
    <string name="navCatFreetime">Free Time</string>

    <string name="newTitle">Title (optional)</string>
    <string name="newNote">Write a note...</string>
    <string name="newCategory">Category</string>
    <string name="newPriority">Priority</string>
    <string name="newPriorityHigh">High</string>
    <string name="newPriorityMed">Medium</string>
    <string name="newPriorityLow">Low</string>
    <string name="newSave">Save</string>

    <string name="editPicture">Do you want to take a picture?</string>
    <string name="recStarted">Recording started</string>
    <string name="recording">Recording</string>
    <string name="recSaved">Recording saved</string>

    <string name="noteUntitled">Untitled</string>
    <string name="noteSaved">Saved with success</string>
    <string name="noteEmpty">Nothing to save</string>

    <string name="exitDialog">Do you want to exit without save?</string>
    <string name="dialogNo">No</string>
    <string name="dialogYes">Yes</string>

    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="deleted">Your note has been deleted</string>

    <string name="action_search">Search</string>
    <string name="searchHint">Find in notes</string>
    <string name="action_settings">Settings</string>

    <string name="pswChangeTxt">Change password</string>
    <string name="pswChangeInput">New password</string>
    <string name="pswChangeConfirm">Confirm</string>

    <string name="transition_name_title">transition:TITLE</string>
    <string name="transition_name_text">transition:TEXT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
