<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navCatAll"
            android:icon="@drawable/ic_add_24dp"
            android:title="@string/navCatAll" />
        <item
            android:id="@+id/navCatLavoro"
            android:icon="@drawable/ic_work_24dp"
            android:title="@string/navCatWork" />
        <item
            android:id="@+id/navCatPersonale"
            android:icon="@drawable/ic_person_24dp"
            android:title="@string/navCatPersonal" />
        <item
            android:id="@+id/navCatHobby"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/navCatHobby" />
        <item
            android:id="@+id/navCatTempoLibero"
            android:icon="@drawable/ic_access_time_24dp"
            android:title="@string/navCatFreetime" />
    </group>
</menu>
