<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group.mydea.NuovaNota">


    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView3"
        android:hint="@string/newTitle" />

    <EditText
        android:id="@+id/editBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignEnd="@+id/editTitle"
        android:layout_alignRight="@+id/editTitle"
        android:layout_below="@+id/editTitle"
        android:gravity="top"
        android:hint="@string/newNote" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/newPriority"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/newPriorityHigh" />

        <RadioButton
            android:id="@+id/radioAverage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/radioHigh"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/newPriorityMed" />

        <RadioButton
            android:id="@+id/radioSlow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnSave"
            android:layout_alignRight="@+id/btnSave"
            android:layout_alignTop="@+id/radioAverage"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/newPriorityLow" />
    </RadioGroup>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioCategory"
        android:layout_centerHorizontal="true"
        android:text="@string/newCategory"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioWork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/navCatWork" />

        <RadioButton
            android:id="@+id/radioPersonal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/navCatPersonal" />

        <RadioButton
            android:id="@+id/radioHobby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/navCatHobby" />

        <RadioButton
            android:id="@+id/radioFreetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/navCatFreetime" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imgviewFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editBody"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView3" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imgviewFoto"
        android:layout_alignRight="@+id/imgviewFoto"
        android:layout_alignTop="@+id/editTitle"
        fab:fab_expandDirection="down"
        fab:fab_addButtonColorNormal="@color/colorAccent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_24dp"
            android:tint="@android:color/white"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/buttonPressed"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collections_24dp"
            android:tint="@android:color/white"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/buttonPressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic_24dp"
            android:tint="@android:color/white"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/buttonPressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
