<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group.mydea.SettingsActivity"
    android:background="@color/cardview_light_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvSettings"
        android:text="@string/action_settings"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pswChangeTxt"
        android:id="@+id/tvChangePsw"
        android:textStyle="bold"
        android:layout_below="@+id/tvSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pswChangeInput"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/tvChangePsw"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pswChangeConfirm"
        android:id="@+id/btnConfirm"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_toRightOf="@+id/editText" />
</RelativeLayout>
