<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group.mydea.LoginActivity"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_mydea"
        android:layout_above="@+id/tvEnterPsw" />

    <TextView
        android:id="@+id/tvEnterPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pswText"
        android:layout_above="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Error"
        android:id="@+id/tvError"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:textSize="17dp"
        android:gravity="center"/>
    <Button
        android:id="@+id/button_decrypt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvError"
        android:layout_marginTop="15dp"
        android:text="@string/decryptButton"
        android:background="@drawable/login_button_background" />

</RelativeLayout>
